[package]
name = "iron_pulse_client"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff = "0.1"
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
recs = { git = "https://github.com/Dj-Codeman/recs.git" }
system = { git = "https://github.com/Dj-Codeman/system.git" }
pretty = { git = "https://github.com/Dj-Codeman/pretty.git" }
